--- a/days/w2d1d2/bert.ipynb
+++ b/days/w2d1d2/bert.ipynb
@@ -145,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -153,7 +153,7 @@
      "output_type": "stream",
      "text": [
       "layer norm MATCH!!!!!!!!\n",
-      " SHAPE (20, 10) MEAN: -1.431e-08 STD: 1.003 VALS [0.6906 -0.84 1.881 1.711 -0.5116 -0.9577 -0.1387 -0.6943 -0.6741 -0.4662...]\n"
+      " SHAPE (20, 10) MEAN: 9.537e-09 STD: 1.003 VALS [-1.451 0.3538 -0.2551 -0.01632 -0.8813 1.419 1.729 -1.063 -0.5407 0.7053...]\n"
      ]
     }
    ],
@@ -169,7 +169,7 @@
     "        var = torch.var(X.detach(), -1, unbiased=False)\n",
     "        mean = torch.mean(X.detach(), -1)\n",
     "\n",
-    "        return (X.detach() - mean.unsqueeze(-1)) / torch.sqrt(var.unsqueeze(-1) + self.eps) * self.weight + self.bias\n",
+    "        return (X - mean.unsqueeze(-1)) / torch.sqrt(var.unsqueeze(-1) + self.eps) * self.weight + self.bias\n",
     "\n",
     "bert_tests.test_layer_norm(LayerNorm)"
    ]
@@ -247,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -255,7 +255,7 @@
      "output_type": "stream",
      "text": [
       "embedding MATCH!!!!!!!!\n",
-      " SHAPE (2, 3, 5) MEAN: -0.06748 STD: 1.062 VALS [1.176 -0.1914 0.8212 1.047 -0.481 0.7106 -1.304 -1.307 -0.438 -0.2764...]\n"
+      " SHAPE (2, 3, 5) MEAN: 0.03286 STD: 0.9076 VALS [-0.6789 0.3443 0.9332 -0.7662 0.4706 1.176 -0.1914 0.8212 1.047 -0.481...]\n"
      ]
     }
    ],
@@ -266,7 +266,7 @@
     "        self.weight = torch.nn.Parameter(torch.randn(vocab_size, embed_size))\n",
     "\n",
     "    def forward(self, X):\n",
-    "        return (self.weight[X, :]).to(X.device)\n",
+    "        return self.weight[X]\n",
     "\n",
     "bert_tests.test_embedding(Embedding)\n",
     "\n"
@@ -391,8 +391,8 @@
     "        dropout, intermediate_size, num_heads, num_layers, num_classes=2\n",
     "    ):\n",
     "        super().__init__()\n",
-    "        self.embedding = BertEmbedding(vocab_size, hidden_size, max_position_embeddings, type_vocab_size, dropout)\n",
-    "        self.transformer = nn.ModuleList([BertBlock(hidden_size, intermediate_size, num_heads, dropout) for _ in range(num_layers)])\n",
+    "        self.embedding = BertEmbedding(vocab_size, hidden_size,max_position_embeddings, type_vocab_size, dropout)\n",
+    "        self.transformer = nn.ModuleList([BertBlock(hidden_size,            intermediate_size, num_heads, dropout) for _ in range(num_layers)])\n",
     "        self.lm_head = BertUnembed(hidden_size, vocab_size)\n",
     "        self.classification_head = torch.nn.Linear(hidden_size, num_classes)\n",
     "\n",
