--- a/days/w2d1d2/bert.ipynb
+++ b/days/w2d1d2/bert.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -23,7 +23,7 @@
      "output_type": "stream",
      "text": [
       "attention pattern raw MATCH!!!!!!!!\n",
-      " SHAPE (2, 12, 3, 3) MEAN: 0.01187 STD: 0.1058 VALS [-0.08359 0.04135 -0.3284 -0.07717 -0.08166 -0.06112 0.167 -0.09143 -0.05247 0.08712...]\n"
+      " SHAPE (2, 12, 3, 3) MEAN: -0.005734 STD: 0.1119 VALS [-0.04354 -0.1251 -0.08468 0.000329 0.04512 0.04313 -0.06505 -0.00371 -0.2014 -0.08509...]\n"
      ]
     }
    ],
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -49,7 +49,7 @@
      "output_type": "stream",
      "text": [
       "attention MATCH!!!!!!!!\n",
-      " SHAPE (2, 3, 768) MEAN: -0.005397 STD: 0.1188 VALS [-0.1328 -0.03846 0.0552 0.05028 -0.2345 0.2486 -0.05643 -0.1067 -0.05023 0.2406...]\n"
+      " SHAPE (2, 3, 768) MEAN: 0.001222 STD: 0.1121 VALS [-0.004495 0.1208 -0.01198 0.11 0.04152 0.123 -0.08915 -0.2047 0.1538 -0.07482...]\n"
      ]
     }
    ],
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -109,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -129,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -145,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -153,7 +153,7 @@
      "output_type": "stream",
      "text": [
       "layer norm MATCH!!!!!!!!\n",
-      " SHAPE (20, 10) MEAN: 9.537e-09 STD: 1.003 VALS [-1.451 0.3538 -0.2551 -0.01632 -0.8813 1.419 1.729 -1.063 -0.5407 0.7053...]\n"
+      " SHAPE (20, 10) MEAN: -1.431e-08 STD: 1.003 VALS [0.6906 -0.84 1.881 1.711 -0.5116 -0.9577 -0.1387 -0.6943 -0.6741 -0.4662...]\n"
      ]
     }
    ],
@@ -176,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -198,9 +198,8 @@
     "        self.dropout = nn.Dropout(dropout)\n",
     "\n",
     "    def forward(self, X):\n",
-    "        identity = torch.clone(X)\n",
-    "        X = bert_mlp(X, self.mlp1, self.mlp2)\n",
-    "        return self.layer_norm(self.dropout(X) + identity)\n",
+    "        mlp_X = bert_mlp(X, self.mlp1, self.mlp2)\n",
+    "        return self.layer_norm(self.dropout(mlp_X) + X)\n",
     "\n",
     "class BertBlock(nn.Module):\n",
     "    def __init__(self, hidden_size, intermediate_size, num_heads, dropout):\n",
@@ -217,9 +216,8 @@
     "        \n",
     "\n",
     "    def forward(self, X):\n",
-    "        residual1 = torch.clone(X)\n",
-    "        output1 = self.layer_norm(self.attention(X) + residual1)\n",
-    "        return self.residual(output1)\n",
+    "        normed = self.layer_norm(self.attention(X) + X)\n",
+    "        return self.residual(normed)\n",
     "\n",
     "\n",
     "bert_tests.test_bert_block(BertBlock)\n",
@@ -228,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -247,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -255,7 +253,7 @@
      "output_type": "stream",
      "text": [
       "embedding MATCH!!!!!!!!\n",
-      " SHAPE (2, 3, 5) MEAN: 0.03286 STD: 0.9076 VALS [-0.6789 0.3443 0.9332 -0.7662 0.4706 1.176 -0.1914 0.8212 1.047 -0.481...]\n"
+      " SHAPE (2, 3, 5) MEAN: -0.2095 STD: 0.8819 VALS [-0.8435 0.0199 -0.7648 1.023 -1.396 -0.8435 0.0199 -0.7648 1.023 -1.396...]\n"
      ]
     }
    ],
@@ -297,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -305,7 +303,7 @@
      "output_type": "stream",
      "text": [
       "bert embedding MATCH!!!!!!!!\n",
-      " SHAPE (2, 3, 768) MEAN: 0 STD: 1 VALS [0.2316 0.08455 -0.5146 1.436 2.029 -1.117 2.775 -0.5305 -0.4485 -0.2485...]\n"
+      " SHAPE (2, 3, 768) MEAN: 8.278e-10 STD: 1 VALS [-1.319 -0.4378 -2.074 0.9679 0.9274 1.479 -0.501 -1.9 -0.212 0.7961...]\n"
      ]
     }
    ],
@@ -330,7 +328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -359,7 +357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -414,14 +412,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Some weights of the model checkpoint at bert-base-cased were not used when initializing BertForMaskedLM: ['cls.seq_relationship.weight', 'cls.seq_relationship.bias']\n",
+      "Some weights of the model checkpoint at bert-base-cased were not used when initializing BertForMaskedLM: ['cls.seq_relationship.bias', 'cls.seq_relationship.weight']\n",
       "- This IS expected if you are initializing BertForMaskedLM from the checkpoint of a model trained on another task or with another architecture (e.g. initializing a BertForSequenceClassification model from a BertForPreTraining model).\n",
       "- This IS NOT expected if you are initializing BertForMaskedLM from the checkpoint of a model that you expect to be exactly identical (initializing a BertForSequenceClassification model from a BertForSequenceClassification model).\n"
      ]
@@ -434,14 +432,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/plain": "_IncompatibleKeys(missing_keys=['classification_head.weight', 'classification_head.bias'], unexpected_keys=[])"
+      "text/plain": [
+       "_IncompatibleKeys(missing_keys=['classification_head.weight', 'classification_head.bias'], unexpected_keys=[])"
+      ]
      },
-     "execution_count": 21,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -477,8 +477,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.8.10 64-bit",
-   "name": "python3810jvsc74a57bd0767d51c1340bd893661ea55ea3124f6de3c7a262a8b4abca0554b478b1e2ff90"
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -491,9 +492,8 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.8.10"
-  },
-  "orig_nbformat": 2
+  }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
