--- a/days/w2d1/w2d1.ipynb
+++ b/days/w2d1/w2d1.ipynb
@@ -2,18 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2"
@@ -21,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -115,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -178,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -201,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -226,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -246,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -269,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -304,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -315,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -336,7 +327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -363,7 +354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -408,18 +399,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "bert MATCH!!!!!!!!\n",
-      " SHAPE (1, 4, 28996) MEAN: 0.003031 STD: 0.5765 VALS [-0.5742 -0.432 0.1186 -0.7165 -0.5261 0.4967 1.223 0.3165 -0.3247 -0.5716...]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "class Bert(nn.Module):\n",
     "    def __init__(\n",
@@ -459,6 +441,7 @@
     "            ]\n",
     "        )\n",
     "\n",
+    "        # TODO: Tie unembedding weights\n",
     "        self.lm_head = nn.Sequential(\n",
     "            OrderedDict(\n",
     "                [\n",
@@ -507,7 +490,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -566,14 +549,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Some weights of the model checkpoint at bert-base-cased were not used when initializing BertForMaskedLM: ['cls.seq_relationship.bias', 'cls.seq_relationship.weight']\n",
+      "Some weights of the model checkpoint at bert-base-cased were not used when initializing BertForMaskedLM: ['cls.seq_relationship.weight', 'cls.seq_relationship.bias']\n",
       "- This IS expected if you are initializing BertForMaskedLM from the checkpoint of a model trained on another task or with another architecture (e.g. initializing a BertForSequenceClassification model from a BertForPreTraining model).\n",
       "- This IS NOT expected if you are initializing BertForMaskedLM from the checkpoint of a model that you expect to be exactly identical (initializing a BertForSequenceClassification model from a BertForSequenceClassification model).\n"
      ]
@@ -583,7 +566,7 @@
      "output_type": "stream",
      "text": [
       "comparing Berts MATCH!!!!!!!!\n",
-      " SHAPE (10, 20, 28996) MEAN: -2.694 STD: 2.467 VALS [-5.191 -5.284 -5.276 -5.436 -5.785 -5.458 -5.483 -5.676 -5.722 -5.645...]\n"
+      " SHAPE (10, 20, 28996) MEAN: -2.702 STD: 2.377 VALS [-5.679 -5.777 -5.893 -5.582 -5.954 -5.679 -6.112 -6.121 -6.171 -5.848...]\n"
      ]
     }
    ],
@@ -636,29 +619,36 @@
     "\n",
     "    return {transform_key(k): v for k, v in hf_dict.items() if include_key(k)}\n",
     "\n",
+    "\n",
     "# https://stackoverflow.com/a/43615015\n",
     "\n",
-    "def load_pretrained_bert():\n",
+    "\n",
+    "def load_pretrained_bert(num_classes: Optional[int] = None):\n",
     "    my_bert = Bert(\n",
-    "        vocab_size=28996, hidden_size=768, max_position_embeddings=512, \n",
-    "        type_vocab_size=2, dropout=0.1, intermediate_size=3072, \n",
-    "        num_heads=12, num_layers=12\n",
+    "        vocab_size=28996,\n",
+    "        hidden_size=768,\n",
+    "        max_position_embeddings=512,\n",
+    "        type_vocab_size=2,\n",
+    "        dropout=0.1,\n",
+    "        intermediate_size=3072,\n",
+    "        num_heads=12,\n",
+    "        num_layers=12,\n",
+    "        num_classes=num_classes,\n",
     "    )\n",
     "    pretrained_bert = bert_tests.get_pretrained_bert()\n",
-    "    my_bert.load_state_dict(hf_to_our_state_dict(pretrained_bert.state_dict()))\n",
+    "\n",
+    "    load_res = my_bert.load_state_dict(\n",
+    "        hf_to_our_state_dict(pretrained_bert.state_dict()), strict=False\n",
+    "    )\n",
+    "    assert len(load_res.unexpected_keys) == 0\n",
+    "\n",
     "    return my_bert, pretrained_bert\n",
     "\n",
-    "if __name__ == '__main__' and '__file__' not in globals():\n",
+    "\n",
+    "if __name__ == \"__main__\" and \"__file__\" not in globals():\n",
     "    my_bert, pretrained_bert = load_pretrained_bert()\n",
     "    bert_tests.test_same_output(my_bert, pretrained_bert, tol=1e-4)\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
