--- a/days/w2d1d2/bert_scratch.ipynb
+++ b/days/w2d1d2/bert_scratch.ipynb
@@ -140,19 +140,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[('released', 0.02), ('nominated', 0.01), ('used', 0.01), ('available', 0.01), ('successful', 0.01)]\n",
-      "[('released', 0.03), ('used', 0.02), ('known', 0.01), ('described', 0.01), ('produced', 0.01)]\n",
-      "[('built', 0.02), ('destroyed', 0.01), ('located', 0.01), ('the', 0.01), ('completed', 0.01)]\n",
-      "[('St', 0.02), ('No', 0.01), ('unknown', 0.01), ('Dr', 0.01), ('L', 0.01)]\n",
-      "[('the', 0.38), ('his', 0.04), ('a', 0.04), ('her', 0.03), ('their', 0.02)]\n",
-      "[('years', 0.02), ('##s', 0.01), ('##0', 0.0), ('city', 0.0), ('time', 0.0)]\n"
+      "[('the', 0.14), ('\"', 0.1), ('a', 0.06), ('that', 0.04), ('in', 0.03)]\n",
+      "[('referred', 0.08), ('due', 0.04), ('able', 0.02), ('similar', 0.01), ('according', 0.01)]\n",
+      "[('possible', 0.02), ('a', 0.02), ('well', 0.02), ('not', 0.01), ('\"', 0.01)]\n",
+      "[('known', 0.04), ('well', 0.01), ('seen', 0.01), ('released', 0.01), ('him', 0.01)]\n",
+      "[('used', 0.01), ('written', 0.01), ('found', 0.01), ('able', 0.01), ('based', 0.01)]\n",
+      "[('Mr', 0.02), ('a', 0.01), ('Dr', 0.01), ('the', 0.01), ('possible', 0.01)]\n",
+      "[('St', 0.02), ('the', 0.01), ('No', 0.01), ('a', 0.01), ('it', 0.01)]\n",
+      "[('the', 0.45), ('his', 0.11), ('a', 0.05), ('her', 0.03), ('their', 0.03)]\n",
+      "[('\"', 0.06), ('time', 0.05), ('years', 0.05), ('critics', 0.01), ('.', 0.01)]\n",
+      "[('the', 0.12), ('a', 0.05), ('this', 0.04), ('to', 0.03), ('his', 0.02)]\n",
+      "[('released', 0.01), ('used', 0.01), ('described', 0.01), ('written', 0.01), ('available', 0.01)]\n",
+      "[('The', 0.16), ('He', 0.12), ('It', 0.08), ('This', 0.05), ('In', 0.04)]\n",
+      "[('the', 0.12), (',', 0.04), ('in', 0.04), ('of', 0.04), ('.', 0.03)]\n",
+      "[('>', 0.03), ('\"', 0.02), ('it', 0.01), ('years', 0.01), ('Mr', 0.01)]\n"
      ]
     }
    ],
@@ -176,10 +184,12 @@
     "\n",
     "ascii_art_probs(\n",
     "    bert, \n",
-    "    \"MLAB stands for 'Machine Learning Alignment Bootcamp.' \"\\\n",
+    "    'MLAB stands for \"Machine [MASK] Alignment Bootcamp.\" '\\\n",
+    "    \"Here are my [MASK] to the feedback form: \"\\\n",
+    "    \"My name is [MASK]. \"\\\n",
     "    \"The best part about MLAB so far has been [MASK]. \"\\\n",
     "    \"The worst part about MLAB so far has been [MASK]. \"\\\n",
-    "    \"What I would personally like to get ouf of MLAB is [MASK]. \"\\\n",
+    "    \"What I would personally like to get out of MLAB is [MASK]. \"\\\n",
     "    \"Overall, MLAB is [MASK]. \"\\\n",
     "    \"You could make MLAB better by [MASK] [MASK]. \"\\\n",
     "    \"I would prefer that we spend [MASK] time on lecture. \"\\\n",
