We are beginning to understand

--- a/days/w2d1/w2d1.ipynb
+++ b/days/w2d1/w2d1.ipynb
@@ -403,6 +403,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "class LinearT(nn.Linear):\n",
+    "    \"\"\"\n",
+    "    A linear layer whose forward uses the *tranpose* of self.weight.\n",
+    "    \"\"\"\n",
+    "\n",
+    "    def forward(self, in_features: int, out_features: int):\n",
+    "        super.__init__(in_features=out_features, out_features=in_features)\n",
+    "\n",
+    "    def forward(self, input: t.Tensor) -> t.Tensor:\n",
+    "        return F.linear(input, self.weight.T, self.bias)\n",
+    "\n",
+    "\n",
     "class Bert(nn.Module):\n",
     "    def __init__(\n",
     "        self,\n",
@@ -458,10 +470,16 @@
     "                ]\n",
     "            )\n",
     "        )\n",
+    "        # Tie embedding and unembedding weight matrices\n",
+    "        self.lm_head.unembedding.weight = self.embedding.token_embedding.embedding\n",
     "\n",
-    "        self.classification_head = None if num_classes is None else nn.Sequential(\n",
-    "            nn.Dropout(dropout),\n",
-    "            nn.Linear(in_features=hidden_size, out_features=num_classes)\n",
+    "        self.classification_head = (\n",
+    "            None\n",
+    "            if num_classes is None\n",
+    "            else nn.Sequential(\n",
+    "                nn.Dropout(dropout),\n",
+    "                nn.Linear(in_features=hidden_size, out_features=num_classes),\n",
+    "            )\n",
     "        )\n",
     "\n",
     "    def transformer_output(self, input_ids: t.Tensor) -> t.Tensor:\n",
@@ -469,13 +487,14 @@
     "        embed = self.embedding(input_ids, token_type_ids)\n",
     "        return self.transformer(embed)\n",
     "\n",
-    "    def forward(self, input_ids: t.Tensor) -> Union[t.Tensor, Tuple[t.Tensor, t.Tensor]]:\n",
+    "    def forward(\n",
+    "        self, input_ids: t.Tensor\n",
+    "    ) -> Union[t.Tensor, Tuple[t.Tensor, t.Tensor]]:\n",
     "        transformer_output = self.transformer_output(input_ids)\n",
     "        lm_output = self.lm_head(transformer_output)\n",
     "        if self.classification_head is not None:\n",
     "            return (lm_output, self.classification_head(transformer_output[:, 0]))\n",
     "        return lm_output\n",
-    "        \n",
     "\n",
     "\n",
     "# bert_tests.test_bert(Bert)\n"
