--- a/days/w2d3/gpt2.ipynb
+++ b/days/w2d3/gpt2.ipynb
@@ -2,36 +2,41 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
+     "ename": "AttributeError",
+     "evalue": "module 'gpt_tests' has no attribute 'test_unidirectional_attn'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-2-ada251a3e854>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mgpt_tests\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mgpt_tests\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtest_unidirectional_attn\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m: module 'gpt_tests' has no attribute 'test_unidirectional_attn'"
      ]
     }
    ],
    "source": [
-    "%load_ext autoreload\n",
-    "%autoreload 2"
+    "import gpt_tests\n",
+    "gpt_tests.test_unidirectional_attn"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "import torch as t\n",
+    "from typing import *\n",
     "from torch import einsum\n",
     "from einops import rearrange, reduce, repeat\n",
     "import gpt_tests\n",
     "from torch import nn\n",
     "from torch.nn import Module\n",
-    "from math import sqrt"
+    "from math import sqrt\n",
+    "import bert_sol"
    ]
   },
   {
@@ -43,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,14 +82,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Congrats! You've passed the test!\n"
+     "ename": "AttributeError",
+     "evalue": "module 'gpt_tests' has no attribute 'test_unidirectional_attn'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-4-2bbedfdcdde2>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mgpt_tests\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtest_unidirectional_attn\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mMultiHeadedAttention\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m: module 'gpt_tests' has no attribute 'test_unidirectional_attn'"
      ]
     }
    ],
@@ -94,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -119,24 +128,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Congrats! You've passed the test!\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "gpt_tests.test_gpt_block(GPT2Block)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -186,20 +187,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Checking logits:\n",
-      "Congrats! You've passed the test!\n",
-      "Checking final encodings:\n",
-      "Congrats! You've passed the test!\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "gpt_tests.test_gpt(GPT2)"
    ]
@@ -213,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -224,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -234,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -252,167 +242,155 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "token_embedding\n",
-      "pos_embedding\n",
-      "blocks.0.ln1.weight\n",
-      "blocks.0.ln1.bias\n",
-      "blocks.0.attn.attn_lin.weight\n",
-      "blocks.0.attn.attn_lin.bias\n",
-      "blocks.0.attn.out_lin.weight\n",
-      "blocks.0.attn.out_lin.bias\n",
-      "blocks.0.ln2.weight\n",
-      "blocks.0.ln2.bias\n",
-      "blocks.0.mlp.0.weight\n",
-      "blocks.0.mlp.0.bias\n",
-      "blocks.0.mlp.2.weight\n",
-      "blocks.0.mlp.2.bias\n",
-      "blocks.1.ln1.weight\n",
-      "blocks.1.ln1.bias\n",
-      "blocks.1.attn.attn_lin.weight\n",
-      "blocks.1.attn.attn_lin.bias\n",
-      "blocks.1.attn.out_lin.weight\n",
-      "blocks.1.attn.out_lin.bias\n",
-      "blocks.1.ln2.weight\n",
-      "blocks.1.ln2.bias\n",
-      "blocks.1.mlp.0.weight\n",
-      "blocks.1.mlp.0.bias\n",
-      "blocks.1.mlp.2.weight\n",
-      "blocks.1.mlp.2.bias\n",
-      "blocks.2.ln1.weight\n",
-      "blocks.2.ln1.bias\n",
-      "blocks.2.attn.attn_lin.weight\n",
-      "blocks.2.attn.attn_lin.bias\n",
-      "blocks.2.attn.out_lin.weight\n",
-      "blocks.2.attn.out_lin.bias\n",
-      "blocks.2.ln2.weight\n",
-      "blocks.2.ln2.bias\n",
-      "blocks.2.mlp.0.weight\n",
-      "blocks.2.mlp.0.bias\n",
-      "blocks.2.mlp.2.weight\n",
-      "blocks.2.mlp.2.bias\n",
-      "blocks.3.ln1.weight\n",
-      "blocks.3.ln1.bias\n",
-      "blocks.3.attn.attn_lin.weight\n",
-      "blocks.3.attn.attn_lin.bias\n",
-      "blocks.3.attn.out_lin.weight\n",
-      "blocks.3.attn.out_lin.bias\n",
-      "blocks.3.ln2.weight\n",
-      "blocks.3.ln2.bias\n",
-      "blocks.3.mlp.0.weight\n",
-      "blocks.3.mlp.0.bias\n",
-      "blocks.3.mlp.2.weight\n",
-      "blocks.3.mlp.2.bias\n",
-      "blocks.4.ln1.weight\n",
-      "blocks.4.ln1.bias\n",
-      "blocks.4.attn.attn_lin.weight\n",
-      "blocks.4.attn.attn_lin.bias\n",
-      "blocks.4.attn.out_lin.weight\n",
-      "blocks.4.attn.out_lin.bias\n",
-      "blocks.4.ln2.weight\n",
-      "blocks.4.ln2.bias\n",
-      "blocks.4.mlp.0.weight\n",
-      "blocks.4.mlp.0.bias\n",
-      "blocks.4.mlp.2.weight\n",
-      "blocks.4.mlp.2.bias\n",
-      "blocks.5.ln1.weight\n",
-      "blocks.5.ln1.bias\n",
-      "blocks.5.attn.attn_lin.weight\n",
-      "blocks.5.attn.attn_lin.bias\n",
-      "blocks.5.attn.out_lin.weight\n",
-      "blocks.5.attn.out_lin.bias\n",
-      "blocks.5.ln2.weight\n",
-      "blocks.5.ln2.bias\n",
-      "blocks.5.mlp.0.weight\n",
-      "blocks.5.mlp.0.bias\n",
-      "blocks.5.mlp.2.weight\n",
-      "blocks.5.mlp.2.bias\n",
-      "blocks.6.ln1.weight\n",
-      "blocks.6.ln1.bias\n",
-      "blocks.6.attn.attn_lin.weight\n",
-      "blocks.6.attn.attn_lin.bias\n",
-      "blocks.6.attn.out_lin.weight\n",
-      "blocks.6.attn.out_lin.bias\n",
-      "blocks.6.ln2.weight\n",
-      "blocks.6.ln2.bias\n",
-      "blocks.6.mlp.0.weight\n",
-      "blocks.6.mlp.0.bias\n",
-      "blocks.6.mlp.2.weight\n",
-      "blocks.6.mlp.2.bias\n",
-      "blocks.7.ln1.weight\n",
-      "blocks.7.ln1.bias\n",
-      "blocks.7.attn.attn_lin.weight\n",
-      "blocks.7.attn.attn_lin.bias\n",
-      "blocks.7.attn.out_lin.weight\n",
-      "blocks.7.attn.out_lin.bias\n",
-      "blocks.7.ln2.weight\n",
-      "blocks.7.ln2.bias\n",
-      "blocks.7.mlp.0.weight\n",
-      "blocks.7.mlp.0.bias\n",
-      "blocks.7.mlp.2.weight\n",
-      "blocks.7.mlp.2.bias\n",
-      "blocks.8.ln1.weight\n",
-      "blocks.8.ln1.bias\n",
-      "blocks.8.attn.attn_lin.weight\n",
-      "blocks.8.attn.attn_lin.bias\n",
-      "blocks.8.attn.out_lin.weight\n",
-      "blocks.8.attn.out_lin.bias\n",
-      "blocks.8.ln2.weight\n",
-      "blocks.8.ln2.bias\n",
-      "blocks.8.mlp.0.weight\n",
-      "blocks.8.mlp.0.bias\n",
-      "blocks.8.mlp.2.weight\n",
-      "blocks.8.mlp.2.bias\n",
-      "blocks.9.ln1.weight\n",
-      "blocks.9.ln1.bias\n",
-      "blocks.9.attn.attn_lin.weight\n",
-      "blocks.9.attn.attn_lin.bias\n",
-      "blocks.9.attn.out_lin.weight\n",
-      "blocks.9.attn.out_lin.bias\n",
-      "blocks.9.ln2.weight\n",
-      "blocks.9.ln2.bias\n",
-      "blocks.9.mlp.0.weight\n",
-      "blocks.9.mlp.0.bias\n",
-      "blocks.9.mlp.2.weight\n",
-      "blocks.9.mlp.2.bias\n",
-      "blocks.10.ln1.weight\n",
-      "blocks.10.ln1.bias\n",
-      "blocks.10.attn.attn_lin.weight\n",
-      "blocks.10.attn.attn_lin.bias\n",
-      "blocks.10.attn.out_lin.weight\n",
-      "blocks.10.attn.out_lin.bias\n",
-      "blocks.10.ln2.weight\n",
-      "blocks.10.ln2.bias\n",
-      "blocks.10.mlp.0.weight\n",
-      "blocks.10.mlp.0.bias\n",
-      "blocks.10.mlp.2.weight\n",
-      "blocks.10.mlp.2.bias\n",
-      "blocks.11.ln1.weight\n",
-      "blocks.11.ln1.bias\n",
-      "blocks.11.attn.attn_lin.weight\n",
-      "blocks.11.attn.attn_lin.bias\n",
-      "blocks.11.attn.out_lin.weight\n",
-      "blocks.11.attn.out_lin.bias\n",
-      "blocks.11.ln2.weight\n",
-      "blocks.11.ln2.bias\n",
-      "blocks.11.mlp.0.weight\n",
-      "blocks.11.mlp.0.bias\n",
-      "blocks.11.mlp.2.weight\n",
-      "blocks.11.mlp.2.bias\n",
-      "blocks.12.weight\n",
-      "blocks.12.bias\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "for k in their_dict:\n",
-    "    print(k)"
+    "my_gpt.load_state_dict(their_dict)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Efficient text generation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import transformers\n",
+    "%env TOKENIZERS_PARALLELISM=false\n",
+    "\n",
+    "tokenizer = transformers.GPT2Tokenizer.from_pretrained(\"gpt2\")\n",
+    "# print(tokenizer(['Hello, I am a sentence.']))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def feed_gpt(model: nn.Module, text: str, tokenizer, top_k: int = 10):\n",
+    "    input_ids: List[int] = tokenizer(text)[\"input_ids\"]\n",
+    "    logits = model(t.tensor([input_ids], dtype=t.long)).logits\n",
+    "    probs = t.softmax(logits, dim=-1)\n",
+    "    top_logit_idxs = t.argsort(logits, descending=True)[0,:top_k]\n",
+    "    top_logit_words = tokenizer.decode(top_logit_idxs)\n",
+    "    print(top_logit_words)\n",
+    "    print(probs[0,top_logit_idxs])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pretrained_gpt.cpu()\n",
+    "feed_gpt(pretrained_gpt, \"Students at the machine learning bootcamp really enjoyed the\", tokenizer)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def feed_gpt_top(model: nn.Module, input_ids: List[int], top_k: int = 10):\n",
+    "    logits = model(t.tensor([input_ids], dtype=t.long)).logits\n",
+    "    probs = t.softmax(logits, dim=-1)\n",
+    "    return t.argsort(logits, descending=True)[0,0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "my_gpt.eval();"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "start_str = \"The machine learning bootcamp started out nicely. But soon, I got an ominous feeling. Shockingly, I discovered\"\n",
+    "input_ids = tokenizer(start_str)[\"input_ids\"]\n",
+    "for i in range(100):\n",
+    "    new_token = feed_gpt_top(my_gpt, input_ids, 1)\n",
+    "    print(tokenizer.decode(new_token), end = \" \")\n",
+    "    input_ids.append(new_token)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class GPT2Modified(Module):\n",
+    "    def __init__(self, num_layers, num_heads, vocab_size, hidden_size,\n",
+    "                 max_position_embeddings, dropout, layer_norm_epsilon):\n",
+    "        super().__init__()\n",
+    "        self.token_embedding = nn.Parameter(t.randn(vocab_size, hidden_size))\n",
+    "        self.pos_embedding = nn.Parameter(t.randn(max_position_embeddings, hidden_size))\n",
+    "        self.dropout = nn.Dropout(dropout)\n",
+    "        self.blocks = nn.Sequential(\n",
+    "            *[GPT2Block(hidden_size, num_heads, dropout, layer_norm_epsilon)\n",
+    "              for _ in range(num_layers)],\n",
+    "            nn.LayerNorm(hidden_size, eps=layer_norm_epsilon)\n",
+    "        )\n",
+    "        \n",
+    "    def forward(self, x):\n",
+    "        seq_len = x.shape[1]\n",
+    "        embedding = self.token_embedding[x] + self.pos_embedding[:seq_len]\n",
+    "        encoding = self.blocks(self.dropout(embedding))\n",
+    "        self.encoding = encoding\n",
+    "        final_encoding = encoding[:,-1]\n",
+    "        logits = t.einsum('vc,bc->bv', self.token_embedding, final_encoding)\n",
+    "        return GPT2Output(logits=logits, final_encoding=final_encoding)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "my_gpt_modified = GPT2Modified(num_layers=12, num_heads=12, vocab_size=50257, hidden_size=768,\n",
+    "                 max_position_embeddings=1024, dropout=0.1, layer_norm_epsilon=1e-5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "my_gpt_modified.load_state_dict(their_dict)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def create_padded_thing():\n",
+    "    s = 'My life motto: Fortune favors the bold'\n",
+    "    ids = tokenizer(s)[\"input_ids\"]\n",
+    "    thing = [ids[:i]+[0]*(10-i) for i in range(6,10)]\n",
+    "    print([len(t) for t in thing])\n",
+    "\n",
+    "print(tokenizer.decode(t.tensor(create_padded_thing())))"
    ]
   },
   {
