lets go to vs code

--- a/days/w2d3/gpt2.ipynb
+++ b/days/w2d3/gpt2.ipynb
@@ -2,29 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "AttributeError",
-     "evalue": "module 'gpt_tests' has no attribute 'test_unidirectional_attn'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-2-ada251a3e854>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mgpt_tests\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mgpt_tests\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtest_unidirectional_attn\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m: module 'gpt_tests' has no attribute 'test_unidirectional_attn'"
-     ]
-    }
-   ],
-   "source": [
-    "import gpt_tests\n",
-    "gpt_tests.test_unidirectional_attn"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,18 +60,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
-     "ename": "AttributeError",
-     "evalue": "module 'gpt_tests' has no attribute 'test_unidirectional_attn'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-4-2bbedfdcdde2>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mgpt_tests\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtest_unidirectional_attn\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mMultiHeadedAttention\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m: module 'gpt_tests' has no attribute 'test_unidirectional_attn'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Congrats! You've passed the test!\n"
      ]
     }
    ],
@@ -103,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -128,16 +102,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Congrats! You've passed the test!\n"
+     ]
+    }
+   ],
    "source": [
     "gpt_tests.test_gpt_block(GPT2Block)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -187,9 +169,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Checking logits:\n",
+      "Congrats! You've passed the test!\n",
+      "Checking final encodings:\n",
+      "Congrats! You've passed the test!\n"
+     ]
+    }
+   ],
    "source": [
     "gpt_tests.test_gpt(GPT2)"
    ]
@@ -203,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -214,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -224,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -242,9 +235,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<All keys matched successfully>"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "my_gpt.load_state_dict(their_dict)"
    ]
@@ -258,9 +262,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "env: TOKENIZERS_PARALLELISM=false\n"
+     ]
+    }
+   ],
    "source": [
     "import transformers\n",
     "%env TOKENIZERS_PARALLELISM=false\n",
@@ -271,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -287,9 +299,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/ubuntu/.local/lib/python3.8/site-packages/torch/_tensor.py:1013: UserWarning: The .grad attribute of a Tensor that is not a leaf Tensor is being accessed. Its .grad attribute won't be populated during autograd.backward(). If you indeed want the .grad field to be populated for a non-leaf Tensor, use .retain_grad() on the non-leaf Tensor. If you access the non-leaf Tensor by mistake, make sure you access the leaf Tensor instead. See github.com/pytorch/pytorch/pull/30531 for more informations. (Triggered internally at  aten/src/ATen/core/TensorBody.h:417.)\n",
+      "  return self._grad\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " experience learning opportunity program process course training time work challenge\n",
+      "tensor([0.1915, 0.0389, 0.0338, 0.0290, 0.0174, 0.0165, 0.0162, 0.0151, 0.0129,\n",
+      "        0.0129], grad_fn=<IndexBackward0>)\n"
+     ]
+    }
+   ],
    "source": [
     "pretrained_gpt.cpu()\n",
     "feed_gpt(pretrained_gpt, \"Students at the machine learning bootcamp really enjoyed the\", tokenizer)"
@@ -297,7 +327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -309,7 +339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -318,9 +348,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " that  the  machine  learning  boot camp  was  actually  a  very  bad  idea . \n",
+      " \n",
+      " I  was  not  alone .  I  was  also  not  alone  in  my  own  experience .  I  was  also  not  alone  in  my  own  experience . \n",
+      " \n",
+      " I  was  not  alone  in  my  own  experience .  I  was  also  not  alone  in  my  own  experience . \n",
+      " \n",
+      " I  was  not  alone  in  my  own  experience .  I  was  also  not  alone  in  my  own  experience . \n",
+      " \n",
+      " I  was  not  alone  in  my  own  experience .  I  was  also  not  alone  in  my "
+     ]
+    }
+   ],
    "source": [
     "start_str = \"The machine learning bootcamp started out nicely. But soon, I got an ominous feeling. Shockingly, I discovered\"\n",
     "input_ids = tokenizer(start_str)[\"input_ids\"]\n",
@@ -332,7 +378,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -361,7 +407,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -371,26 +417,114 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<All keys matched successfully>"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "my_gpt_modified.load_state_dict(their_dict)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
     "def create_padded_thing():\n",
     "    s = 'My life motto: Fortune favors the bold'\n",
     "    ids = tokenizer(s)[\"input_ids\"]\n",
-    "    thing = [ids[:i]+[0]*(10-i) for i in range(6,10)]\n",
-    "    print([len(t) for t in thing])\n",
+    "    return [ids[:i]+[0]*(10-i) for i in range(4,9)]\n",
     "\n",
-    "print(tokenizer.decode(t.tensor(create_padded_thing())))"
+    "test_batch = t.tensor(create_padded_thing())\n",
+    "\n",
+    "def decode_batch(batch):\n",
+    "    print([tokenizer.decode(batch[i]) for i in range(len(batch))])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[[-0.0340, -0.0429],\n",
+       "         [ 0.2075,  0.3059],\n",
+       "         [-0.0342, -0.2292],\n",
+       "         [ 0.3671, -0.0707],\n",
+       "         [-0.0323, -0.3814],\n",
+       "         [-0.0505, -0.2386],\n",
+       "         [ 0.0306, -0.1637],\n",
+       "         [ 0.0751, -0.1712],\n",
+       "         [ 0.0916, -0.1977],\n",
+       "         [ 0.1046, -0.2181]],\n",
+       "\n",
+       "        [[-0.0340, -0.0429],\n",
+       "         [ 0.2075,  0.3059],\n",
+       "         [-0.0342, -0.2292],\n",
+       "         [ 0.3671, -0.0707],\n",
+       "         [-0.1335,  0.9349],\n",
+       "         [ 0.3443, -0.1450],\n",
+       "         [ 0.2800, -0.1220],\n",
+       "         [ 0.2185, -0.1960],\n",
+       "         [ 0.2100, -0.1533],\n",
+       "         [ 0.2249, -0.1559]],\n",
+       "\n",
+       "        [[-0.0340, -0.0429],\n",
+       "         [ 0.2075,  0.3059],\n",
+       "         [-0.0342, -0.2292],\n",
+       "         [ 0.3671, -0.0707],\n",
+       "         [-0.1335,  0.9349],\n",
+       "         [ 0.1363,  0.0811],\n",
+       "         [ 0.4627, -0.2614],\n",
+       "         [ 0.3536, -0.2568],\n",
+       "         [ 0.1176, -0.2094],\n",
+       "         [ 0.1202, -0.1308]],\n",
+       "\n",
+       "        [[-0.0340, -0.0429],\n",
+       "         [ 0.2075,  0.3059],\n",
+       "         [-0.0342, -0.2292],\n",
+       "         [ 0.3671, -0.0707],\n",
+       "         [-0.1335,  0.9349],\n",
+       "         [ 0.1363,  0.0811],\n",
+       "         [-0.0704,  0.0556],\n",
+       "         [ 0.1992, -0.2992],\n",
+       "         [ 0.1801, -0.1881],\n",
+       "         [-0.2132, -0.0607]],\n",
+       "\n",
+       "        [[-0.0340, -0.0429],\n",
+       "         [ 0.2075,  0.3059],\n",
+       "         [-0.0342, -0.2292],\n",
+       "         [ 0.3671, -0.0707],\n",
+       "         [-0.1335,  0.9349],\n",
+       "         [ 0.1363,  0.0811],\n",
+       "         [-0.0704,  0.0556],\n",
+       "         [-0.6858, -0.9147],\n",
+       "         [ 0.3317, -0.2639],\n",
+       "         [ 0.0736, -0.2989]]], grad_fn=<SliceBackward0>)"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "my_gpt_modified.eval()\n",
+    "my_gpt_modified(test_batch);\n",
+    "my_gpt_modified.encoding[:,:,:2]"
    ]
   },
   {
